$Id$

	WARNING, users of Sparc and HP-PA systems should be carefull, some
	menus might not work.
	All other users on Intel machines (99,9% I think) can use this version.


v0.37.2		23-Feb-2003.

	general:
		System prepared for setting the official FTSC product code,
		this will be 0x11FF. The code is not yet activated.



v0.37.1		14-Jan-2003 - 23-Feb-2003

	upgrade:
		After installing the binaries, start mbsetup, enter menu 1 and
		leave that and save it. This will set the default rules 
		directory, here we will store the area rules of all echomail
		areas.
		After upgrade you may remove ~/etc/maptabs and it's contents.
		After upgrade you may remove ~/etc/bank.data.
		After upgrade you may remove ~/etc/safe.data.
		If you want, download and install the nu-door and safe-door
		packages.

	general:
		This version may be used on production systems, but be 
		carefull and check your logs.
		Spanish templates and macros added to the examples.
		In several messages handling functions the international 
		charset translations are removed because of several bugs. They
		will be replaced by standard library functions. Right now the
		messages are 8 bit clean and there is no translation on the
		gateway. The maptabs are removed.
		Menu items 22 and 23 are removed, menu 319 is added. You may 
		want to replace the default txtfiles and menus, upgraded
		versions are in the distribution but are not automatic
		installed.
		Documented menu 318, was present for a long time, just not in
		the html docs.
		The main Makefile now sets each txtfiles directory to mode 775
		to allow doors to write ansi/ascii screens.
		Removed the safe cracker door, this is now external.

	nodelist.a:
		Added experimental support for IP nodes lookup using a default
		domain method. This is not the final implementation yet!
		Update, this works now as described in a FSP-xxxx that is in
		discussion in the FTSC. This will also work for current
		practice.

	common.a: