@@ -283,6 +283,8 @@ long		file_crc(char *path, int);
 time_t		file_time(char *path);
 int             mkdirs(char *name, mode_t);
 int		diskfree(int);
+int		getfilecase(char *, char *);
+
 
 
 /*
